- PR#5644: Stream.count broken when used with Sapp or Slazy nodes
- PR#5647: Cannot use install_printer in debugger
- PR#5651: printer for abstract data type (camlp4 revised syntax)
- PR#5655: ocamlbuild doesn't pass cflags when building C stubs
- PR#5661: fixes for the test suite
- PR#5671: initialization of compare_ext field in caml_final_custom_operations()
- problem with printing of string literals in camlp4 (reported on caml-list)
- emacs mode: colorization of comments and strings now works correctly

Feature wishes:
- PR#352: new option "-stdin" to make ocaml read stdin as a script
- PR#4444: new String.trim function, removing leading and trailing whitespace
- PR#4898: new Sys.big_endian boolean for machine endianness
- PR#5199: tests are run only for bytecode if either native support is missing,
  or a non-empty value is set to "BYTECODE_ONLY" Makefile variable
- PR#5236: new '%revapply' primitive with the semantics 'revapply x f = f x',
    and '%apply' with semantics 'apply f x = f x'.
- PR#5255: natdynlink detection on powerpc, hurd, sparc
- PR#5297: compiler now checks existence of builtin primitives
- PR#5329: (Windows) more efficient Unix.select if all fd's are sockets
- PR#5358: first class modules don't allow "with type" declarations for types
  in sub-modules
- PR#5397: Filename.temp_dir_name should be mutable
- PR#5411: new directive for the toplevel: #load_rec
- PR#5420: Unix.openfile share mode (Windows)
- PR#5437: warning for useless open statements
- PR#5438: new warnings for unused declarations
- PR#5454: Digest.compare is missing and md5 doc update
- PR#5467: no extern "C" into ocaml C-stub headers
- PR#5478: ocamlopt assumes ar command exists
- PR#5479: Num.num_of_string may raise an exception, not reflected in the
  documentation.
- PR#5555: Add function Hashtbl.reset to resize the bucket table to
  its initial size.
- PR#5597: register names for instrtrace primitives in embedded bytecode